# delta

./: .gitignore  README.md  env.example  pyproject.toml  requirements.txt
autodock/: Dockerfile  README.md  docker-compose.yml  ligand.sdf
autodock/app/: autodock_api.py  autodock_task.py  docking.py  entrypoint.sh  grid.py  inference.py  install_meeko.sh  models.py  preprocessing.py  requirements.txt  test_api_local.py  test_batch_api.py  test_imports.py
autodock/app/models/: __init__.py
experiments/gemini_runs/0614_1214_DA9_gemini_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/gemini_runs/0615_1806_6S1_gemini_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/gemini_runs/0616_1950_IM0_gemini_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/gpt4.1_runs/0616_1857_0CF_gpt4.1_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/gpt4.1_runs/0616_1910_GHA_gpt4.1_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/gpt4.1_runs/0616_1924_WPS_gpt4.1_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/o3_runs/0616_1617_Y81_o3_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/o3_runs/0616_1737_5K6_o3_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/o3_runs/0616_1826_VLM_o3_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet-3-7/0611_1648_GO5_sonnet-3.7_3/: main_history_iteration_1.md
experiments/sonnet-3-7/0616_1530_KMB_sonnet-3.7_3/: iteration_1_history.md
experiments/sonnet-3-7/0616_2232_GRR_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md
experiments/sonnet-4/0616_1306_GNB_sonnet-4_3/: iteration_2_history.md
experiments/sonnet-4/0617_2239_FA8_sonnet-4_3/: iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1123_149_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1123_5HI_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1123_J16_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1339_MOQ_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1357_0GD_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1402_RBU_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1537_OUH_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1547_7QG_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1553_SQR_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1729_CRK_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1736_LFZ_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1752_Z5R_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1913_73S_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_1935_6TH_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_2055_NWG_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_2110_12Z_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_2215_GV4_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
experiments/sonnet_3_7_scale_up/0618_2252_2M0_sonnet-3.7_3/: iteration_1_history.md  iteration_2_history.md  iteration_3_history.md
gurnemanz/: .gitignore  DOCUMENTATION.md  README.md  config.yaml  gurnemanz.cabal
gurnemanz/src/App/: Env.hs  Main.hs  Types.hs
gurnemanz/src/Common/: Types.hs
gurnemanz/src/Core/: Base.hs  Error.hs  Lazy.hs  Monad.hs  Types.hs
gurnemanz/src/Domain/Base/: Graph.hs  Property.hs  Types.hs
gurnemanz/src/Domain/Base/Graph/: Types.hs
gurnemanz/src/Domain/Molecule/: Types.hs
gurnemanz/src/Domain/Property/: Types.hs
gurnemanz/src/Domain/Session/: Interpreter.hs  Types.hs
gurnemanz/src/Domain/Transform/: Operations.hs  Types.hs
gurnemanz/src/Infrastructure/API/: Session.hs  Socket.hs
gurnemanz/src/Infrastructure/Config/: Environment.hs  Loader.hs  Types.hs
gurnemanz/src/Infrastructure/Logging/: Types.hs
gurnemanz/src/Infrastructure/Persistence/: JSON.hs  Logging.hs
gurnemanz/src/Infrastructure/Persistence/Logging/: Console.hs
gurnemanz/test/: Spec.hs
ipc/: README.md
paperqa_temp/: setup.py
paperqa_temp/paperqa/: docs.py  settings.py
paperqa_temp/paperqa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
paperqa_temp/paperqa_temp/: __init__.py  core.py  docs.py  litqa.py  llms.py  readers.py  settings.py  types.py
plip/: Dockerfile  README.md  compose.yaml  plip_agent.py  requirements.txt
plip/plip/: plip_api.py  plip_config.py  plip_inference.py  plip_task.py
src/: agent.py
src/demo/: __init__.py  deneme.ipynb  deneme.py  get_molecules.py  llm_pipeline.py  multi_agent_pipeline.py  multi_agent_prompt.py  single_agent_pipeline.py  single_agent_prompt.py  utils.py
src/tools/: gurnemanz.py  gurnemanz_utils.py  mol_utils.py  prot2mol.py  prot2mol_diffdock.py  prot2mol_vina.py  tool_definitions.py  vina.py  vina_plip.py
(+20936 files in other folders)
